// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hooks component with useEntity hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with useGet hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with useGetList hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with useList hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with usePageList hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with usePaging hook renders correctly. 1`] = `
<div>
  Amsterdam
</div>
`;

exports[`Hooks component with useSwitch hook renders correctly. 1`] = `
<div>
  <div
    id="42"
  >
    last
  </div>
  <div>
    yes
  </div>
</div>
`;

exports[`Hooks component with useToggle hook renders correctly as default value is false. 1`] = `
<div>
  <div
    id="42"
  >
    true
  </div>
</div>
`;
